fixing overflow resulting in a white bar

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -29,7 +29,7 @@
   display: block;
   width: 24px;
   height: 24px;
-  color: rgba(55, 53, 47, 0.4);
+  color: rgba(122, 65, 123, 0.4);
 }
 
 .main {
